--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "chai": "^4.2.0",
+    "chalk": "^4.0.0",
     "esm": "^3.2.25",
     "jest": "^26.0.1",
     "jest-esm-transformer": "^1.0.0",
